fix: add overflow: hidden to editor-pane to clip content when width is collapsed to 0px

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -6,6 +6,7 @@
     position: fixed;
     left: 0;
     top: 50px;
+    overflow: hidden;
 }
 
 #editor-pane {
